--- a/Colab04/XCS224W_Colab4.ipynb
+++ b/Colab04/XCS224W_Colab4.ipynb
@@ -813,7 +813,7 @@
     "\n",
     "An overview of the heterogeneous layer you will create is shown below:\n",
     "\n",
-    "![test](./image.png)\n",
+    "![test](Colab04/image.png)\n",
     "\n",
     "where we highlight the following notation:\n",
     "\n",
