--- a/Colab04_Explained/XCS224W_Colab4_Explined.ipynb
+++ b/Colab04_Explained/XCS224W_Colab4_Explined.ipynb
@@ -15,7 +15,7 @@
     "id": "8gzsP50bF6Gb"
    },
    "source": [
-    "![test](./images/Introduction.jpg)"
+    "![test](https://drive.google.com/uc?id=1-P0QFkURX6LPEFbQcPQ-mpFIOHm_KAZ7)"
    ]
   },
   {
